@@ -839,7 +839,7 @@ compute_retention(void)
 		diskp = g_new0(disklist_t, 1);
 		read_diskfile(conf_diskfile, diskp);
 	    }
-	    output_find = find_dump(diskp, 0);
+	    output_find = find_dump(diskp, 1);
 	    sort_find_result("hkDLpbfw", &output_find);
 	    g_free(conf_diskfile);
 	}
